--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,7 @@ sysinfo.txt
 crashlytics-build.properties
 
 MahjongVR/Temp/UnityLockfile
+MahjongVR/Library/SourceAssetDB
+MahjongVR/Library/SourceAssetDB
+MahjongVR/Library/SourceAssetDB
+MahjongVR/Library/SourceAssetDB-lock
